--- a/index.html
+++ b/index.html
@@ -465,10 +465,30 @@
 
       <article>
         <h3>7. Administração Pública Direta e Indireta</h3>
+
+        <p class="link">
+          <a href="https://youtu.be/GsgWZapgVls?si=iX0eItJ5ysWbixg_" target="_blank" rel="noopener noreferrer">
+              Aula sobre Administração Pública Direta e Indireta
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" className="size-6" whidth="20" height="20">
+                <path strokeLinecap="round" strokeLinejoin="round" d="M13.5 6H5.25A2.25 2.25 0 0 0 3 8.25v10.5A2.25 2.25 0 0 0 5.25 21h10.5A2.25 2.25 0 0 0 18 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" />
+              </svg>
+            </a>
+        </p>
+
       </article>
 
       <article>
         <h3>8. Lei nº 8.429/1992 – Improbidade Administrativa</h3>
+
+        <p class="link">
+          <a href="https://youtu.be/o4Gjfhczcjg?si=xfw61PBvaXYNu2X6" target="_blank" rel="noopener noreferrer">
+              Aula sobre Improbidade Administrativa
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" className="size-6" whidth="20" height="20">
+                <path strokeLinecap="round" strokeLinejoin="round" d="M13.5 6H5.25A2.25 2.25 0 0 0 3 8.25v10.5A2.25 2.25 0 0 0 5.25 21h10.5A2.25 2.25 0 0 0 18 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" />
+              </svg>
+            </a>
+        </p>
+
       </article>
 
       <article>
@@ -478,41 +498,54 @@
           <li>Lei de Responsabilidade Fiscal – LC nº 101/2000</li>
           <li>PPA, LDO e LOA</li>
         </ul>
+
+        <p class="link">
+          <a href="rotas/orcmentoPublicoeGestaoFiscal.html" target="_blank" rel="noopener noreferrer">
+              Aula sobre Orçamento Público e Gestão Fiscal
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" className="size-6" whidth="20" height="20">
+                <path strokeLinecap="round" strokeLinejoin="round" d="M13.5 6H5.25A2.25 2.25 0 0 0 3 8.25v10.5A2.25 2.25 0 0 0 5.25 21h10.5A2.25 2.25 0 0 0 18 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" />
+              </svg>
+            </a>
+        </p>
+
       </article>
     </section>
 
     <!-- ================= CONHECIMENTOS GERAIS ================= -->
     <section id="gerais">
       <h2>Conhecimentos Gerais</h2>
-
-      <ul>
-        <li>Lei nº 12.527/2011 – Lei de Acesso à Informação</li>
-        <li>Decreto nº 7.724/2012</li>
-        <li>Lei nº 13.709/2018 – LGPD</li>
-        <li>Lei nº 14.133/2021 – Licitações e Contratos</li>
-        <li>Constituição Federal de 1988 (títulos e capítulos indicados)</li>
-        <li>Igualdade racial e legislação correlata</li>
-        <li>Lei nº 13.146/2015 – Estatuto da Pessoa com Deficiência</li>
-        <li>Manual de Redação da Presidência da República</li>
-        <li>Lei nº 14.540/2023 – Enfrentamento ao assédio sexual</li>
-        <li>Decreto nº 9.758/2019 – Forma de tratamento oficial</li>
-      </ul>
+      <article>
+        <ul>
+          <li>Lei nº 12.527/2011 – Lei de Acesso à Informação</li>
+          <li>Decreto nº 7.724/2012</li>
+          <li>Lei nº 13.709/2018 – LGPD</li>
+          <li>Lei nº 14.133/2021 – Licitações e Contratos</li>
+          <li>Constituição Federal de 1988 (títulos e capítulos indicados)</li>
+          <li>Igualdade racial e legislação correlata</li>
+          <li>Lei nº 13.146/2015 – Estatuto da Pessoa com Deficiência</li>
+          <li>Manual de Redação da Presidência da República</li>
+          <li>Lei nº 14.540/2023 – Enfrentamento ao assédio sexual</li>
+          <li>Decreto nº 9.758/2019 – Forma de tratamento oficial</li>
+        </ul>
+      </article>
     </section>
 
     <!-- ================= INFORMÁTICA ================= -->
     <section id="informatica">
       <h2>Conhecimentos de Informática</h2>
 
-      <ul>
-        <li>Sistemas Operacionais: Windows e Linux</li>
-        <li>Microsoft Office e LibreOffice</li>
-        <li>Internet, Intranet e Extranet</li>
-        <li>Ferramentas e aplicativos online</li>
-        <li>Correio eletrônico e gestão de documentos</li>
-        <li>Segurança da Informação</li>
-        <li>Malware, vírus, phishing</li>
-        <li>Armazenamento e computação em nuvem</li>
-      </ul>
+      <article>
+        <ul>
+          <li>Sistemas Operacionais: Windows e Linux</li>
+          <li>Microsoft Office e LibreOffice</li>
+          <li>Internet, Intranet e Extranet</li>
+          <li>Ferramentas e aplicativos online</li>
+          <li>Correio eletrônico e gestão de documentos</li>
+          <li>Segurança da Informação</li>
+          <li>Malware, vírus, phishing</li>
+          <li>Armazenamento e computação em nuvem</li>
+        </ul>
+      </article>
     </section>
 
   </main>
